<resources>
    <string name="app_name">ex3</string>
    <string name="passwordHint">Password</string>
    <string name="usernameHint">Username</string>
    <string name="btnSave">Save</string>
    <string name="login">Login</string>
    <string name="textview">OurChatApp</string>
    <string name="sing_in">Sing Up</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">DONE</string>
    <string name="upload_profile_picture">Upload profile Picture:</string>
    <string name="add">Add</string>
    <string name="search_username">Search Username</string>
</resources>